--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,165 @@
-#container {
-  text-align: center;
+ion-toolbar {
+    background-image: url('../../assets/img/top-bg.jpg') !important;
+    background-size: 100% 100%;
+    background-repeat: repeat-x;
+    --ion-toolbar-background: transparent;
+    text-align: center;
+    padding: 8px 5px 5px 5px !important;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    //height:68px;
+    img {
+        // height: 45px;
+        // width: 75px;
+        height: 75px;
+    }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-content {
+    --ion-background-color: transparent;
+    background-image: url('../../assets/img/bg_top_removed.jpg') !important;
+    background-size: 100% 100%;
+
+    ion-toolbar {
+        --background: translucent;
+    }
+
+    #container {
+        text-align: center;
+
+        h1 {
+            font-family: 'Roboto Condensed', sans-serif;
+            color: white;
+            margin-top: 16px;
+            font-size: 28px;
+            font-weight: 700;
+        }
+
+        .white-container {
+            background: white;
+            border-radius: 10px;
+            margin: 13px 25px;
+            color: #164395;
+            text-align: left;
+            padding: 8px 23px;
+            line-height: 1.5;
+            min-height: 250px;
+
+            .intro-button-default {
+                text-align: center;
+
+                ion-skeleton-text {
+                    display: inline-block;
+                }
+            }
+
+            .intro-content-skeleton {
+                ion-skeleton-text {
+                    margin-bottom: 10px;
+                }
+            }
+
+            ion-button {
+                display: block;
+                margin: 0 auto;
+                max-width: 200px;
+                width: 100%;
+                height: 60px;
+                line-height: 27;
+                font-size: 22px;
+                text-transform: capitalize;
+                border-radius: 4px;
+            }
+
+            ion-button.create-acc-btn {
+                background-color: #1ac1ee;
+                --ion-color-primary: transparent;
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: 400;
+                margin-top: 38px;
+            }
+
+            ion-button.login-btn {
+                height: 75px;
+                --background: linear-gradient(180deg, #cd43ec 0%, #b37cf0 100%);
+                //background-color: #8d66a9;
+                --ion-color-primary: transparent;
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: 400;
+                margin: 12px auto 14px auto;
+                //max-width: unset;
+                white-space: normal;
+                padding: 8px;
+                //height: unset;
+                text-align: left;
+            }
+        }
+
+        strong {
+            font-size: 22px;
+            line-height: 26px;
+        }
+
+        p {
+            font-size: 19px;
+            line-height: 22px;
+            color: #8c8c8c;
+            margin: 0;
+        }
+
+        .survey-note {
+            font-size: 19px;
+        }
+
+        a {
+            text-decoration: none;
+        }
+    }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.start_button {
+    position: absolute;
+    top: 7px;
+    left: -16px;
+    font-size: 15.2px;
 }
 
-#container a {
-  text-decoration: none;
+.ios {
+    .start_button {
+        left: 0px;
+    }
+}
+
+// .start_button{
+//   position: absolute;
+//     top: 7px;
+//     left: 6px;
+//     font-size: 13.2px;
+// }
+.back-arrow {
+    position: absolute;
+    display: block;
+    width: 70px;
+}
+
+.header-ios {
+    .back-arrow {
+        top: 25px;
+    }
+}
+
+.header-md {
+    .back-arrow {
+        top: 15px
+    }
+}
+
+.signup-agreement {
+    // font-size: 15px;
+    text-align: left;
+    color: #1e4894;
+
+    a {
+        color: #122448;
+        text-decoration: underline !important;
+    }
 }
