Added resources & Company Code page design issue

--- a/src/app/companycode/companycode.page.html
+++ b/src/app/companycode/companycode.page.html
@@ -1,13 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start" class="back-arrow">
-      <!-- Only changed the icon name for Ionic 8 compatibility -->
       <ion-button color="primary" fill="clear" [routerLink]="['/select-intro']">
-        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+        <ion-icon name="arrow-undo-circle" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
 
-    <!-- Added missing closing quote for alt attribute -->
     <img src="../../assets/img/logo.png" alt="logo">
   </ion-toolbar>
 </ion-header>
@@ -18,14 +16,12 @@
       Please enter the unique code provided by your company or other entities
     </div>
     
-    <!-- Added Enter key support for better UX -->
     <input 
       type="text" 
       placeholder="ABC123" 
       class="comp-code-local" 
       list="local_codes" 
       [(ngModel)]="companyCode"
-      (keyup.enter)="submitCode(companyCode)"
     >
     
     <datalist id="local_codes">
@@ -33,11 +29,9 @@
     </datalist>
     
     <div class="ion-text-center ion-margin-top">
-      <!-- Added disabled state for better UX -->
       <ion-button 
         style="--background:linear-gradient(180deg, #cd43ec 0%, #b37cf0 100%)" 
         (click)="submitCode(companyCode)"
-        [disabled]="!companyCode || companyCode.trim() === ''"
       >
         Submit to Save
       </ion-button>
