Added Global CSS

--- a/src/global.scss
+++ b/src/global.scss
@@ -25,13 +25,179 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-/**
- * Ionic Dark Mode
- * -----------------------------------------------------
- * For more info, please see:
- * https://ionicframework.com/docs/theming/dark-mode
- */
+/* Note: ionic4-auto-complete import may need verification as it might not be compatible with newer versions */
 
-/* @import "@ionic/angular/css/palettes/dark.always.css"; */
-/* @import "@ionic/angular/css/palettes/dark.class.css"; */
-// @import "@ionic/angular/css/palettes/dark.system.css";
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url('/assets/fonts/roboto-condensed.bold.ttf');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url('/assets/fonts/roboto-condensed.regular.ttf');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Open Sans Regular';
+    src: url('/assets/fonts/open-sans.regular.ttf');
+}
+
+* {
+    font-family: 'Open Sans Regular', sans-serif, 'Roboto Condensed';
+    font-size: 13px;
+}
+
+/* Updated for Ionic 8 searchbar */
+ion-searchbar {
+    --searchbar-search-icon-color: var(--ion-color-medium);
+    --searchbar-input-background: #fff;
+}
+
+.searchbar-search-icon {
+    inset-inline-start: 16px;
+    top: 11px;
+    width: 0 !important;
+    height: 0 !important;
+}
+
+.searchbar-input-container {
+    input {
+        padding-inline-start: 0 !important;
+        padding-inline-end: 0 !important;
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+        padding-left: 19px !important;
+        padding-right: 19px !important;
+        font-size: 20px;
+        color: #164395;
+        line-height: 27px;
+        background-color: #fff !important;
+    }
+}
+
+input {
+    background-color: #fff !important;
+}
+
+ion-searchbar.search-address {
+    padding: 0 !important;
+}
+
+/* Note: ionic4-auto-complete might need to be replaced with a newer compatible library */
+ion-auto-complete {
+    width: 100%;
+    border: 1px solid silver;
+    font-size: 20px;
+    text-align: left;
+    box-sizing: border-box;
+    border-radius: 3px;
+    line-height: 27px;
+    margin: 0 auto;
+    display: block;
+    --placeholder-color: #164395;
+    --placeholder-opacity: 1 !important;
+}
+
+.search-box-address ion-auto-complete ul {
+    width: auto !important;
+    left: 24px;
+    right: 24px;
+}
+
+/* Updated for Ionic 8 item styling */
+ion-item {
+    --inner-padding-start: 0 !important;
+    --inner-padding-end: 0 !important;
+    --padding-start: 0 !important;
+    --padding-end: 0 !important;
+}
+
+.item-textarea {
+    border: 1px solid silver;
+    font-size: 20px;
+    text-align: left;
+    box-sizing: border-box;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 3px;
+    margin-top: 5px;
+    margin-bottom: 21px;
+    
+    ion-item {
+        --inner-padding-start: 0 !important;
+        --inner-padding-end: 0 !important;
+        --padding-start: 0 !important;
+        --padding-end: 0 !important;
+    }
+    
+    .item-inner {
+        --inner-padding-end: 0 !important;
+    }
+}
+
+.item-interactive {
+    --highlight-color-focused: transparent;
+    --highlight-color-valid: transparent;
+    --highlight-color-invalid: transparent;
+}
+
+/* Updated button styling for Ionic 8 */
+ion-button {
+    --border-radius: 4px;
+}
+
+.button-native {
+    line-height: 1.25 !important;
+}
+
+.suggestion-list {
+    width: 100%;
+    display: none;
+    position: absolute;
+    top: 50px;
+    background-color: white;
+    box-sizing: border-box;
+    border: 1px solid #28b6e4;
+    max-height: 175px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    z-index: 1000;
+    
+    ul.suggestion-list-email {
+        margin: 0;
+        padding: 0;
+        
+        li {
+            text-align: left;
+            list-style-type: none;
+            padding: 5px 7px;
+            border-bottom: 1px solid #afecff;
+            cursor: pointer;
+        }
+        
+        li:last-child {
+            border: 0;
+        }
+    }
+}
+
+/* Updated for Ionic 8 alert styling */
+ion-alert {
+    .alert-message {
+        font-size: 19px !important;
+    }
+    
+    .alert-checkbox-label {
+        white-space: normal !important;
+    }
+}
+
+/* Additional Capacitor-specific adjustments */
+html {
+    --ion-safe-area-top: env(safe-area-inset-top);
+    --ion-safe-area-bottom: env(safe-area-inset-bottom);
+    --ion-safe-area-left: env(safe-area-inset-left);
+    --ion-safe-area-right: env(safe-area-inset-right);
+}
