--- a/src/app/companycode/companycode.page.scss
+++ b/src/app/companycode/companycode.page.scss
@@ -1,127 +1,120 @@
 ion-toolbar {
-    background-image: url("../../assets/img/top-bg.jpg") !important;
-    background-size: 100% 100%;
-    background-repeat: repeat-x;
-    --ion-toolbar-background: transparent;
-    text-align: center;
-    padding: 8px 5px 5px 5px !important;
+  background-image: url("../../assets/img/top-bg.jpg") !important;
+  background-size: 100% 100%;
+  background-repeat: repeat-x;
+  --background: transparent;
+  --ion-toolbar-background: transparent;
+  text-align: center;
+  padding: 8px 5px 5px 5px !important;
 
-    // height: 68px;
-    img {
-        // height: 45px;
-        height: 75px;
-        // width: 75px;
-    }
+  img {
+    height: 75px;
+  }
 }
 
 ion-content {
-    --ion-background-color: transparent;
-    background-image: url("../../assets/img/bg_top_removed.jpg") !important;
-    background-size: 100% 100%;
+  --background: transparent;
+  background-image: url("../../assets/img/bg_top_removed.jpg") !important;
+  background-size: 100% 100%;
 
-    ion-toolbar {
-        --background: translucent;
-    }
+  ion-toolbar {
+    --background: transparent;
+  }
 }
 
 .white-container {
-    background: white;
-    border-radius: 10px;
-    margin: 13px 20px;
-    color: #164395;
+  background: white;
+  border-radius: 10px;
+  margin: 13px 20px;
+  color: #164395;
+  text-align: left;
+  padding: 15px 20px;
+  line-height: 1.5;
+  min-height: 245px;
+
+  .intro-button-default {
+    text-align: center;
+
+    ion-skeleton-text {
+      display: inline-block;
+    }
+  }
+
+  .intro-content-skeleton {
+    ion-skeleton-text {
+      margin-bottom: 10px;
+    }
+  }
+
+  ion-button {
+    display: block;
+    margin: 0 auto;
+    max-width: 175px;
+    width: 100%;
+    height: 50px;
+    font-size: 22px;
+    text-transform: capitalize;
+    border-radius: 4px;
+    --background: transparent;
+    --box-shadow: none;
+  }
+
+  ion-button.create-acc-btn {
+    background-color: #1ac1ee;
+    --background: #1ac1ee;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    margin-top: 38px;
+  }
+
+  ion-button.login-btn {
+    background-color: #8d66a9;
+    --background: #8d66a9;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    margin-top: 30px;
+    margin-bottom: 32px;
+  }
+
+  ion-input {
+    border: 1px solid silver;
+    font-size: 20px;
     text-align: left;
-    padding: 15px 20px;
-    line-height: 1.5;
-    min-height: 245px;
-
-    .intro-button-default {
-        text-align: center;
-
-        ion-skeleton-text {
-            display: inline-block;
-        }
-    }
-
-    .intro-content-skeleton {
-        ion-skeleton-text {
-            margin-bottom: 10px;
-        }
-    }
-
-    ion-button {
-        display: block;
-        margin: 0 auto;
-        max-width: 175px;
-        width: 100%;
-        height: 50px;
-        font-size: 22px;
-        text-transform: capitalize;
-        border-radius: 4px;
-    }
-
-    ion-button.create-acc-btn {
-        background-color: #1ac1ee;
-        --ion-color-primary: transparent;
-        font-family: 'Roboto Condensed', sans-serif;
-        font-weight: 400;
-        margin-top: 38px;
-    }
-
-    ion-button.login-btn {
-        background-color: #8d66a9;
-        --ion-color-primary: transparent;
-        font-family: 'Roboto Condensed', sans-serif;
-        font-weight: 400;
-        margin-top: 30px;
-        margin-bottom: 32px;
-    }
-
-    ion-input {
-        border: 1px solid silver;
-        font-size: 20px;
-        text-align: left;
-        box-sizing: border-box;
-        width: 100%;
-        max-width: 500px;
-        border-radius: 3px;
-        margin-top: 5px;
-        margin-bottom: 21px;
-        --placeholder-color: #164395;
-        --placeholder-opacity: 0.35;
-        --padding-top: 10px;
-        --padding-bottom: 10px;
-        --padding-start: 19px;
-        --padding-end: 19px;
-    }
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 500px;
+    border-radius: 3px;
+    margin-top: 5px;
+    margin-bottom: 21px;
+    --placeholder-color: #164395;
+    --placeholder-opacity: 0.35;
+    --padding-top: 10px;
+    --padding-bottom: 10px;
+    --padding-start: 19px;
+    --padding-end: 19px;
+    --background: transparent;
+  }
 }
 
 .back-arrow {
-    position: absolute;
-    display: block;
-    //LEFT: 65PX;
-    //width: 70px;
-}
-
-.header-ios {
-    .back-arrow {
-        top: 25px;
-    }
+  position: absolute;
+  display: block;
 }
 
 .comp-code-local {
-    border: 1px solid silver;
-    font-size: 20px;
-    width: 100%;
-    background: #ffff;
-    border-radius: 3px;
-    margin-bottom: 21px;
-    padding: 10px 12px;
+  border: 1px solid silver;
+  font-size: 20px;
+  width: 100%;
+  background: #ffff;
+  border-radius: 3px;
+  margin-bottom: 21px;
+  padding: 10px 12px;
 
-    &::placeholder {
-        color: #ddd;
-    }
+  &::placeholder {
+    color: #ddd;
+  }
 
-    &:focus-visible {
-        outline-color: aqua;
-    }
+  &:focus-visible {
+    outline-color: aqua;
+  }
 }
