--- a/src/app/surveyform/surveyform.page.scss
+++ b/src/app/surveyform/surveyform.page.scss
@@ -519,3 +519,11 @@ ion-textarea {
     --padding-start: 19px !important;
     --padding-end: 19px !important;
 }
+
+ion-icon.md.hydrated {
+    font-size: 0.8em;
+
+
+ion-button.login-btn.md.button.button-solid.ion-activatable.ion-focusable.hydrated {
+    color: white;
+}}
