--- a/src/app/surveyresult/surveyresult.page.html
+++ b/src/app/surveyresult/surveyresult.page.html
@@ -29,7 +29,7 @@
     
     
       <div [innerHTML]="thankyouContent"></div>
-      <ion-button class="login-btn" (click)="gotoNav('startover', '0')">Start Over &nbsp;<ion-icon name="refresh"></ion-icon></ion-button>
+      <ion-button class="login-btn" (click)="gotoNav('startover', '0')"><p>Start Over&nbsp;</p><ion-icon name="refresh"></ion-icon></ion-button>
     </div>
     <div class="white-container" *ngIf="thankyouContent==null">
       <div class="ion-padding custom-skeleton result-img-default">
