--- a/src/app/surveyform/surveyform.page.scss
+++ b/src/app/surveyform/surveyform.page.scss
@@ -522,8 +522,8 @@ ion-textarea {
 
 ion-icon.md.hydrated {
     font-size: 0.8em;
-
+}
 
 ion-button.login-btn.md.button.button-solid.ion-activatable.ion-focusable.hydrated {
     color: white;
-}}
+}
