--- a/src/app/surveyform/surveyform.page.scss
+++ b/src/app/surveyform/surveyform.page.scss
@@ -527,3 +527,20 @@ ion-icon.md.hydrated {
 ion-button.login-btn.md.button.button-solid.ion-activatable.ion-focusable.hydrated {
     color: white;
 }
+
+.pdf-preview {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+
+    ion-icon {
+        font-size: 48px;
+        margin-bottom: 5px;
+    }
+
+    span {
+        font-size: 12px;
+        color: var(--ion-color-medium);
+    }
+}
