Add: added the icon

--- a/src/app/select-intro/select-intro.page.scss
+++ b/src/app/select-intro/select-intro.page.scss
@@ -5,10 +5,8 @@ ion-toolbar {
     --ion-toolbar-background: transparent;
     text-align: center;
     padding: 8px 5px 5px 5px !important;
-    //height:68px;
+
     img {
-        // height: 45px;
-        // width: 75px;
         height: 75px;
     }
 }
@@ -17,13 +15,15 @@ ion-content {
     --ion-background-color: transparent;
     background-image: url("../../assets/img/bg_top_removed.jpg") !important;
     background-size: 100% 100%;
-    // Reserve space for the bottom banner so footer links stay visible.
-    --padding-bottom: calc(90px + env(safe-area-inset-bottom));
+    --padding-bottom: calc(50px + env(safe-area-inset-bottom));
     ion-toolbar {
         --background: translucent;
     }
+
     #container {
         text-align: center;
+        padding-bottom: 60px;
+
         h1 {
             font-family: "Roboto Condensed", sans-serif;
             color: white;
@@ -31,6 +31,7 @@ ion-content {
             font-size: 28px;
             font-weight: 700;
         }
+
         .white-container {
             background: white;
             border-radius: 10px;
@@ -40,55 +41,55 @@ ion-content {
             padding: 17px 17px 28px;
             line-height: 1.5;
             min-height: 250px;
+
             .intro-button-default {
                 text-align: center;
+
                 ion-skeleton-text {
                     display: inline-block;
                 }
             }
+
             .intro-content-skeleton {
                 ion-skeleton-text {
                     margin-bottom: 10px;
                 }
             }
+
             ion-button {
                 display: block;
                 margin: 0 auto;
-                //max-width: 175px;
                 width: 100%;
                 height: 50px;
                 font-size: 20px;
                 text-transform: inherit;
                 border-radius: 4px;
             }
+
             ion-button.create-acc-btn {
                 background-color: #1ac1ee;
                 --ion-color-primary: transparent;
                 font-family: "Roboto Condensed", sans-serif;
                 font-weight: 400;
                 margin: 0px auto 14px auto;
-                // max-width: 230px;
             }
+
             ion-button.type-in {
-                // max-width: unset;
                 white-space: normal;
-                // padding: 8px;
                 height: unset;
                 color: #fff;
-                // background-color: #8d66a9;
                 background: rgb(210, 35, 250);
                 background: linear-gradient(180deg, rgba(210, 35, 250, 1) 0%, rgba(142, 70, 223, 1) 100%);
             }
+
             ion-button.type-ins {
-                // max-width: unset;
                 white-space: normal;
-                // padding: 8px;
                 height: unset;
                 color: #fff;
-                // background-color: #8d66a9;
                 background: rgb(210, 35, 250);
                 background: linear-gradient(180deg, #cd43ec 0%, #b37cf0 100%)
             }
+
             ion-button.login-btn {
                 background-color: #8d66a9;
                 --ion-color-primary: transparent;
@@ -98,16 +99,19 @@ ion-content {
                 margin-bottom: 32px;
             }
         }
+
         strong {
             font-size: 22px;
             line-height: 26px;
         }
+
         p {
             font-size: 18px;
             line-height: 18px;
             color: #8c8c8c;
             margin: 0;
         }
+
         a {
             text-decoration: none;
         }
@@ -130,7 +134,6 @@ ion-content {
     position: absolute;
     top: 7px;
     left: -12px;
-    //font-size: 13.2px;
 }
 
 .button-native {
