--- a/src/app/surveyform/surveyform.page.html
+++ b/src/app/surveyform/surveyform.page.html
@@ -1,9 +1,24 @@
 <ion-header [translucent]="true" class="survey-form">
   <ion-toolbar>
-    <img *ngIf="!logoImage || logoImage==''" src="../../assets/img/logo.png" />
-    <img *ngIf="logoImage && logoImage!=''" [src]="logoImage" />
-    <ion-button color="primary" slot="end" (click)="LogoutApp()">
-      {{exitBtnText}}
+    <!-- Microphone Button with Text -->
+    <div class="mic-text-container" slot="start">
+      <ion-button fill="clear" class="mic-button">
+        <div class="text-lines">
+          <div class="line-1"><ion-icon name="mic" class="mic-icon"></ion-icon> Tap the</div>
+          <div class="line-2">Keyboard Mic</div>
+        </div>
+      </ion-button>
+    </div>
+
+    <!-- Logo -->
+    <div class="logo-container">
+      <img *ngIf="!logoImage" src="../../assets/img/logo.png" />
+      <img *ngIf="logoImage" [src]="logoImage" />
+    </div>
+
+    <!-- Home Button -->
+    <ion-button slot="end" color="primary" (click)="LogoutApp()" class="home_btn">
+      {{ exitBtnText }}
     </ion-button>
   </ion-toolbar>
 </ion-header>
@@ -20,14 +35,6 @@
       (Questions with <span class="red">*</span> must be answered)
     </p>
     <div class="white-container" *ngIf="formBuilder.length>0">
-
-      <!-- ChatGPT link added here -->
-      <div class="chatgpt-link" style="margin-bottom: 15px; text-align: end;">
-        <a href="https://chat.openai.com" target="_blank"
-          style="text-decoration: underline; font-weight: 500; padding-right: 20px;">
-          Create Q/A using ChatGPT
-        </a>
-      </div>
 
       <div id="dynamicFormSurvey" class="surveyf-form">
         <div class="formSubSection" *ngFor="let tSubSec of formBuilder; let i=index">
