--- a/src/app/select-intro/select-intro.page.scss
+++ b/src/app/select-intro/select-intro.page.scss
@@ -5,11 +5,7 @@ ion-toolbar {
     --ion-toolbar-background: transparent;
     text-align: center;
     padding: 8px 5px 5px 5px !important;
-
-    //height:68px;
     img {
-        // height: 45px;
-        // width: 75px;
         height: 75px;
     }
 }
@@ -18,23 +14,21 @@ ion-content {
     --ion-background-color: transparent;
     background-image: url("../../assets/img/bg_top_removed.jpg") !important;
     background-size: 100% 100%;
-    // Reserve space for the bottom banner so footer links stay visible.
     --padding-bottom: calc(90px + env(safe-area-inset-bottom));
     ion-toolbar {
         --background: translucent;
     }
-
     #container {
         text-align: center;
-
         h1 {
             font-family: "Roboto Condensed", sans-serif;
             color: white;
             margin-top: 16px;
-            font-size: 28px;
+            font-size: 38px;
             font-weight: 700;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
-
         .white-container {
             background: white;
             border-radius: 10px;
@@ -44,85 +38,63 @@ ion-content {
             padding: 17px 17px 28px;
             line-height: 1.5;
             min-height: 250px;
-
             .intro-button-default {
                 text-align: center;
-
                 ion-skeleton-text {
                     display: inline-block;
                 }
             }
-
             .intro-content-skeleton {
                 ion-skeleton-text {
                     margin-bottom: 10px;
                 }
             }
-
             ion-button {
                 display: block;
-                margin: 0 auto;
-                //max-width: 175px;
+                margin: 0 auto 14px auto;
                 width: 100%;
-                height: 50px;
+                height: auto;
+                min-height: 50px;
                 font-size: 20px;
-                text-transform: inherit;
+                text-transform: none;
                 border-radius: 4px;
+                font-family: "Roboto Condensed", sans-serif;
+                font-weight: 400;
+                white-space: normal;
+                line-height: 1.3;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
             }
-
             ion-button.create-acc-btn {
                 background-color: #1ac1ee;
                 --ion-color-primary: transparent;
-                font-family: "Roboto Condensed", sans-serif;
-                font-weight: 400;
-                margin: 0px auto 14px auto;
-                // max-width: 230px;
             }
-
             ion-button.type-in {
-                // max-width: unset;
-                white-space: normal;
-                // padding: 8px;
-                height: unset;
                 color: #fff;
-                // background-color: #8d66a9;
-                background: rgb(210, 35, 250);
                 background: linear-gradient(180deg, rgba(210, 35, 250, 1) 0%, rgba(142, 70, 223, 1) 100%);
             }
-
             ion-button.type-ins {
-                // max-width: unset;
-                white-space: normal;
-                // padding: 8px;
-                height: unset;
                 color: #fff;
-                // background-color: #8d66a9;
-                background: rgb(210, 35, 250);
-                background: linear-gradient(180deg, #cd43ec 0%, #b37cf0 100%)
+                background: linear-gradient(180deg, #cd43ec 0%, #b37cf0 100%);
             }
-
             ion-button.login-btn {
                 background-color: #8d66a9;
                 --ion-color-primary: transparent;
-                font-family: "Roboto Condensed", sans-serif;
-                font-weight: 400;
                 margin-top: 30px;
                 margin-bottom: 32px;
             }
         }
-
         strong {
             font-size: 22px;
             line-height: 26px;
         }
-
         p {
-            font-size: 18px;
-            line-height: 18px;
-            color: #8c8c8c;
+            font-size: 21px;
+            line-height: 1.2;
+            color: #fff;
             margin: 0;
+            padding: 0;
         }
-
         a {
             text-decoration: none;
         }
@@ -132,34 +104,30 @@ ion-content {
 .first_ln {
     color: #fff !important;
     font-weight: 700;
-    letter-spacing: 0px;
-    font-size: 22px !important;
+    // font-size: 22px !important;
+    // line-height: 1.3 !important;
+    // margin: 0 0 6px 0 !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .second_ln {
-    color: #fff !important;
-    letter-spacing: 0px;
-}
-
-.start_button {
-    position: absolute;
-    top: 7px;
-    left: -12px;
-    //font-size: 13.2px;
-}
-
-.button-native {
-    line-height: 10px
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .content-link {
-    font-size: 12px;
+    // font-size: 12px;
     text-decoration: underline !important;
 }
 
 .custom {
     table {
         padding: 10px;
+
+        span {
+            font-size: 20px !important;
+        }
     }
 }
 
