--- a/src/app/surveyform/surveyform.page.html
+++ b/src/app/surveyform/surveyform.page.html
@@ -1,25 +1,33 @@
 <ion-header [translucent]="true" class="survey-form">
   <ion-toolbar>
-    <!-- Microphone Button with Text -->
-    <div class="mic-text-container" slot="start">
-      <ion-button fill="clear" class="mic-button">
-        <div class="text-lines">
-          <div class="line-1"><ion-icon name="mic" class="mic-icon"></ion-icon> Tap the</div>
-          <div class="line-2">Keyboard Mic</div>
+    <div class="header-container">
+      <!-- Left Section - Microphone Button with Text -->
+      <div class="header-section">
+        <div class="mic-text-container">
+          <ion-button fill="clear" class="mic-button">
+            <div class="text-lines">
+              <div class="line-1"><ion-icon name="mic" class="mic-icon"></ion-icon> Tap the</div>
+              <div class="line-2">Keyboard Mic</div>
+            </div>
+          </ion-button>
         </div>
-      </ion-button>
-    </div>
+      </div>
 
-    <!-- Logo -->
-    <div class="logo-container">
-      <img *ngIf="!logoImage" src="../../assets/img/logo.png" />
-      <img *ngIf="logoImage" [src]="logoImage" />
-    </div>
+      <!-- Middle Section - Logo -->
+      <div class="header-section">
+        <div class="logo-container">
+          <img *ngIf="!logoImage" src="../../assets/img/logo.png" />
+          <img *ngIf="logoImage" [src]="logoImage" />
+        </div>
+      </div>
 
-    <!-- Home Button -->
-    <ion-button slot="end" color="primary" (click)="LogoutApp()" class="home_btn">
-      {{ exitBtnText }}
-    </ion-button>
+      <!-- Right Section - Home Button -->
+      <div class="header-section">
+        <ion-button color="primary" (click)="LogoutApp()" class="home_btn">
+          {{ exitBtnText }}
+        </ion-button>
+      </div>
+    </div>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true" class="survey-form-page">
