--- a/src/global.scss
+++ b/src/global.scss
@@ -224,3 +224,7 @@ ion-content > .banner-ad {
     z-index: 10000;
     background: white; // Match your footer background
   }
+
+ion-content {
+    --padding-bottom: calc(90px + env(safe-area-inset-bottom));
+}
